logs/audit_output.txt
python :   File "C:\Users\cp\Documents\GitHub\Noi
seVsRandomness\audit_presentation_vs_data.py", li
ne 1
At line:1 char:1
+ python audit_presentation_vs_data.py 2>&1 | Out
-File -FilePath audit_ ...
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (  F 
   ile "C:\User...ata.py", line 1:String) [], R  
  emoteException
    + FullyQualifiedErrorId : NativeCommandError
 
    ->x->[->x->!->x->]->x->[->x->[->x->!->x->]->x
->X->x->[->x->!->x->]->x->]->x->[->x->!->x->]->x-
>[->x->[->x->!->x->]->x->[->x->[->x->!->x->]->x->
X->x->[->x->!->x->]->x->]->x->[->x->!->x->]->x->O
->x->[->x->!->x->]->x->[->x->[->x->!->x->]->x->X-
>x->[->x->!->x->]->x->]->x->[->x->!->x->]->x->K->
x->[->x->!->x->]->x->[->x->[->x->!->x->]->x->X->x
->[->x->!->x->]->x->]->x->[->x->!->x->]->x->]->x-
>[->x->!->x->]->x->[->x->[->x->!->x->]->x->X->x->
[->x->!->x->]->x->]->x->[->x->!->x->]->x->"->x->[
->x->!->x->]->x->[->x->[->x->!->x->]->x->X->x->[-
>x->!->x->]->x->]->x->[->x->!->x->]->x->[->x->[->
x->!->x->]->x->[->x->[->x->!->x->]->x->X->x->[->x
->!->x->]->x->]->x->[->x->!->x->]->x->O->x->[->x-
>!->x->]->x->[->x->[->x->!->x->]->x->X->x->[->x->
!->x->]->x->]->x->[->x->!->x->]->x->K->x->[->x->!
->x->]->x->[->x->[->x->!->x->]->x->X->x->[->x->!-
>x->]->x->]->x->[->x->!->x->]->x->]->x->[->x->!->
x->]->x->[->x->[->x->!->x->]->x->X->x->[->x->!->x
->]->x->]->x->[->x->!->x->]->x->"->x->[->x->!->x-
>]->x->[->x->[->x->!->x->]->x->X->x->[->x->!->x->
]->x->]->x->[->x->!->x->]->x->[->x->[->x->!->x->]
->x->[->x->[->x->!->x->]->x->X->x->[->x->!->x->]-
>x->]->x->[->x->!->x->]->x->O->x->[->x->!->x->]->
x->[->x->[->x->!->x->]->x->X->x->[->x->!->x->]->x
->]->x->[->x->!->x->]->x->K->x->[->x->!->x->]->x-
>[->x->[->x->!->x->]->x->X->x->[->x->!->x->]->x->
]->x->[->x->!->x->]->x->]->x->[->x->!->x->]->x->[
->x->[->x->!->x->]->x->X->x->[->x->!->x->]->x->]-
>x->[->x->!->x->]->x->"->x->[->x->!->x->]->x->[->
x->[->x->!->x->]->x->X->x->[->x->!->x->]->x->]->x
->[->x->!->x->]->x->[->x->[->x->!->x->]->x->[->x-
>[->x->!->x->]->x->X->x->[->x->!->x->]->x->]->x->
[->x->!->x->]->x->O->x->[->x->!->x->]->x->[->x->[
->x->!->x->]->x->X->x->[->x->!->x->]->x->]->x->[-
>x->!->x->]->x->K->x->[->x->!->x->]->x->[->x->[->
x->!->x->]->x->X->x->[->x->!->x->]->x->]->x->[->x
->!->x->]->x->]->x->[->x->!->x->]->x->[->x->[->x-
>!->x->]->x->X->x->[->x->!->x->]->x->]->x->[->x->
!->x->]->x->
                                                 
                                                 
                                                 
                                                 
                                                 
                                                 
                                                 
                                                 
                                                 
                                                 
                                                 
                                                 
                                                 
                                                 
                                                 
                                                 
                                                 
                                                 
                                                 
                                                 
                                                 
                                                 
                                                 
                                                 
                                                 
                                                 
                                                 
                                                 
                                                 
                      ^
SyntaxError: unterminated string literal (detecte
d at line 1)
